# MDYw-Feiju-QQBot

./: .env.example  .gitignore  PORTABILITY.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
mdy_feiju/: .env.prod  Dockerfile  README.md  debug_db.py  debug_db_2.py  docker-compose.yml  pyproject.toml  requirements.txt
mdy_feiju/data/: memes.db  verify_list_memes.py
mdy_feiju/data/petpet/: meme_list.yml
mdy_feiju/src/plugins/: reply.py  touch_me.py
mdy_feiju/src/plugins/2fa/: __init__.py  crypto.py  db.py  ntp_time.py
mdy_feiju/src/plugins/anti_recall/: __init__.py
mdy_feiju/src/plugins/bilibili_parser/: __init__.py  data_source.py  extractor.py  models.py  render.py
mdy_feiju/src/plugins/codeforces/: __init__.py  api.py  draw.py
mdy_feiju/src/plugins/custom_memes/: __init__.py  data_source.py  db.py  handlers.py  utils.py
mdy_feiju/src/plugins/laizhi/: __init__.py  db.py  memes.db
mdy_feiju/src/plugins/memes/: __init__.py  alias.py  data_source.py  db.py  handlers.py  verify_dedup.py
mdy_feiju/src/plugins/shared_db/: __init__.py  config.py  db.py
mdy_feiju/src/plugins/webhook/: __init__.py
mdy_feiju/src/plugins/wordcloud/: __init__.py  config.py  data_source.py  db.py  generate_mask.py  generator.py  nlp_engine.py  recorder.py  renderer.py
mdy_feiju/src/plugins/wordcloud/resources/: user_dict.txt
mdy_feiju/src/plugins/wordcloud/resources/stopwords/: baidu_stopwords.txt  custom_qq.txt  hit_stopwords.txt
mdy_feiju/tests/: send_webhook.py
