[project]
name = "mdy_feiju"
version = "0.1.0"
description = "mdy_feiju"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_memes"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
